[gd_scene load_steps=14 format=2]

[ext_resource path="res://Resources/Fonts/public-pixel-font/PublicPixel-eZPz6.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Textures/UI/SelectionFrame.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/StorePanel.gd" type="Script" id=3]
[ext_resource path="res://Resources/Audio/FX/UI_Change_Selection2.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/Textures/FX/PlayerLight.png" type="Texture" id=5]
[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=6]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.639752, 0.667045 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 200, 100, 1 )
flag_disable_z = true
gravity = Vector3( 0, 200, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_curve = SubResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 17
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="StorePanel" type="Node2D"]
position = Vector2( -1, -1 )
script = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 7.49999, -47.5 )
scale = Vector2( 1.6275, 0.7225 )
texture = ExtResource( 5 )

[node name="Light2D2" type="Light2D" parent="."]
visible = false
position = Vector2( -54.5, -6 )
scale = Vector2( 0.7825, 0.15 )
texture = ExtResource( 5 )
energy = 2.5

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 5, -21 )
process_material = SubResource( 7 )

[node name="Frames" type="Node2D" parent="."]

[node name="SelectionFrame" type="Sprite" parent="Frames"]
position = Vector2( -56, -66.285 )
scale = Vector2( 3.00935, 3.6715 )
texture = ExtResource( 2 )

[node name="SelectionFrame3" type="Sprite" parent="Frames"]
position = Vector2( -58, -5 )
scale = Vector2( 3, 2.843 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_left = -239.0
margin_top = -141.0
margin_right = 242.0
margin_bottom = -106.0
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="Price" type="Label" parent="."]
margin_left = -203.0
margin_top = -75.0
margin_right = -74.0
margin_bottom = -38.0
custom_fonts/font = SubResource( 3 )
text = "Price: 
"

[node name="Current" type="Label" parent="."]
margin_left = 119.0
margin_top = -94.0
margin_right = 306.0
margin_bottom = -51.0
custom_fonts/font = SubResource( 4 )
text = "Current: 
"

[node name="Next" type="Label" parent="."]
margin_left = 116.0
margin_top = -19.0
margin_right = 245.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "Next: 
"

[node name="BuyButton" type="Button" parent="."]
margin_left = -218.0
margin_top = -33.0
margin_right = 104.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "BUY"
flat = true

[node name="BuyAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 1.48
script = ExtResource( 6 )

[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
